updated gitignore file

--- a/E_commerce_Sales.ipynb
+++ b/E_commerce_Sales.ipynb
@@ -12,8 +12,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "32a688d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#importing pandas and loading data\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n",
+    "df = pd.read_excel(\"data/Online Retail.xlsx\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "aa535bb9",
    "metadata": {},
    "outputs": [
     {
@@ -123,17 +140,13 @@
        "4 2010-12-01 08:26:00       3.39     17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#importing pandas and loading data\n",
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_excel(\"Online Retail.xlsx\")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
