created cusotmer and sales subset of the dataset

--- a/E_commerce_Sales.ipynb
+++ b/E_commerce_Sales.ipynb
@@ -1350,6 +1350,26 @@
     "df_sales.info()\n",
     "df_sales.describe()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8d51032",
+   "metadata": {},
+   "source": [
+    "### data cleaning summary \n",
+    "The dataset was cleaned by removing cancelled transactions, correcting invalid quantities and prices, handling missing values appropriately, and engineering time and revenue features for downstream analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "522088aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sales.to_csv(\"data/ecommerce_sales_cleaned.csv\", index=False)\n",
+    "df_customers.to_csv(\"data/ecommerce_customers_cleaned.csv\", index=False)\n"
+   ]
   }
  ],
  "metadata": {
